Change Log

2009-06-03
	Implemented CEILING, FLOOR, ROUND, TRUNCATE procedures.
	Implemented SIN, COS, and TAN procedures.
	Added tests for all of the above.
	Made procedures expecting integers accept real numbers too, as
	long as they are exact and can be converted to integer without
	loss of precision. Added tests.
	Made the reader accept an excess number of digits in the mantissa,
	giving an inexact number.
2009-06-02
	* I have tested this release on my Alpha with -DBITS_PER_WORD_64
	* and it passed all tests. If make test still fails on Linux/PPC,
	* I would need SSH access to a PPC box to investigate further.
	Implemented SQRT.
	Fixed INTEGER? (mistook random objects for integers).
	Removed some 64-bit glitches.
	Applied some cosmetics.
	Added test cases.
2009-06-01
	Implemented real number division (/).
	Made INTEGER? return #T for reals that can be converted to
	integer without loss of precision.
	Made INEXACT->EXACT return an integer whenever possible.
	Extended domain of EXPT to real.
	Implemented the internal EXPONENT and MANTISSA procedures.
	Fixed a GC leak in real_normalize(). Thanks, Masaru KIMURA.
	Added test cases for / and EXPT.
	Added more type test cases.
	Updated the S9(1) man page.
2009-05-31
	Implemented real number multiplication (*).
	Just try: (expt 9.9 999999999). Is this cool?
	Intercepted numeric underflow and overflow.
	Added test cases for real *.
	Added #E and #I syntax.
	Added real number test cases for #E, #I, EXACT->INEXACT,
	INEXACT->EXACT, NEGATIVE?, POSITIVE?, ZERO?.
2009-05-30
	Fixed INEXACT->EXACT (sign error).
	Implemented real -.
	Implemented exactness in
	- the +, MIN, and MAX procedures;
	- bignum-->real conversion;
	- real number normalization.
	Added real number tests for -, ABS, MIN, MAX.
	Added test cases for EXACT->INEXACT and INEXACT->EXACT.
2009-05-29
	Implementated real +.
	Implemented EXACT? and INEXACT?.
	Implemented EXACT->INEXACT and INEXACT->EXACT.
	Fixed a few bugs in real <.
	Added real number tests for +.