@@ -445,14 +445,12 @@ Numeric procedures:
 .BR atan ,
 .BR complex? ,
 .BR denominator ,
-.BR exp ,
 .BR imag-part ,
-.BR log ,
 .BR magnitude ,
 .BR make-polar ,
 .BR make-rectangular ,
 .BR numerator ,
-.BR rational ,
+.BR rational? ,
 .BR rationalize ,
 .BR real-part .
 .SH "BUGS
