@@ -1,5 +1,8 @@
 Change Log
 
+2009-06-04
+	Implemented LOG and EXP procedures. Added tests.
+	Fixed size of Called_procedures[]. Good catch, Masaru KIMURA.
 2009-06-03
 	Implemented CEILING, FLOOR, ROUND, TRUNCATE procedures.
 	Implemented SIN, COS, and TAN procedures.
